--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -108,7 +108,7 @@ button:focus {
 	}
 
 	&.btn-remove-address {
-		background-color: $brand-danger;
+		background-color: $danger;
 		margin-right: -5px;
 		color: #fff;
 
