--- a/resources/scss/ceres/components/_anicon.scss
+++ b/resources/scss/ceres/components/_anicon.scss
@@ -79,7 +79,7 @@
                 &:hover {
                     & > .anicon-search-item {
                         &:after {
-                            background: $brand-primary;
+                            background: $primary;
                         }
                     }
                 }
