--- a/resources/scss/ceres/plugins/_bs4-progress.scss
+++ b/resources/scss/ceres/plugins/_bs4-progress.scss
@@ -16,6 +16,6 @@
     color: $white;
     text-align: center;
     white-space: nowrap;
-    background-color: $brand-primary;
+    background-color: $primary;
     transition: width .6s ease;
 }
