--- a/resources/scss/ceres/views/Category/_category-list-controls.scss
+++ b/resources/scss/ceres/views/Category/_category-list-controls.scss
@@ -20,7 +20,7 @@
       cursor: pointer;
       display: inline-block;
       &:hover {
-        color: $brand-danger;
+        color: $danger;
       }
     }
   }
