--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -19,7 +19,7 @@ nav.navbar ul.nav li.dropdown:hover .dropdown-menu {
 // mobile
 $menu-h-sm  			: 100%;
 $menu-w-sm  			: 100%;
-$menu-bg-sm 			: $brand-primary;
+$menu-bg-sm 			: $primary;
 $menu-breadcrumb-bg 	: $gray-darker;
 $menu-breadcrumb-color 	: $white;
 $menu-color-sm 			: $white;
@@ -30,22 +30,22 @@ $menu-font-f-sm  		: $font-family-serif;
 $menu-h-lg  			: 100%;
 $menu-w-lg  			: 100%;
 $menu-bg-lg 			: transparent;
-$menu-color-lg 			: $brand-primary;
+$menu-color-lg 			: $primary;
 $menu-font-s-lg  		: 1em;
 $menu-font-f-lg  		: $font-family-serif;
-$menu-li-bg-hover		: $brand-primary;
+$menu-li-bg-hover		: $primary;
 $menu-li-color-hover	: $white;
 $menu-li-padding-x      : 1rem;
 $menu-li-padding-y      : 1.3rem;
 // bigmenu
-$menu-big-menu-bg 				: darken($brand-primary,10%);
+$menu-big-menu-bg 				: darken($primary,10%);
 $menu-big-menu-li-bg			: transparent;
-$menu-big-menu-li-bg-hover		: $brand-primary;
+$menu-big-menu-li-bg-hover		: $primary;
 $menu-big-menu-li-color			: $white;
-$menu-big-menu-li-color-hover	: $text-color;
+$menu-big-menu-li-color-hover	: $body-color;
 // megamenu
 $megamenu-bg 					: $white;
-$megamenu-color-top-btn			: $brand-primary;
+$megamenu-color-top-btn			: $primary;
 $megamenu-color-bottom-btn		: $black;
 $megamenu-btn-hover 			: darken($top-bar-basket-btn, 20%);
 $megamenu-btn-more 				: $gray;
