--- a/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
+++ b/resources/scss/ceres/views/Templates/CategoryListItem/_category-list-item.scss
@@ -47,7 +47,7 @@
         }
 
         &:hover{
-            border-color: transparent $brand-primary transparent transparent;
+            border-color: transparent $primary transparent transparent;
 
             & > i{
                 color: #fff;
