--- a/resources/scss/ceres/views/Templates/Customer/_contact.scss
+++ b/resources/scss/ceres/views/Templates/Customer/_contact.scss
@@ -31,7 +31,7 @@
 
 	.form-check-label {
 		&.error {
-			background: $brand-danger !important;
+			background: $danger !important;
 			color: $white !important;
 			border-radius: .1rem;
 			transition: all .3s ease;
