--- a/resources/scss/ceres/views/Templates/PaymentShippingSelect/_payment-shipping-select.scss
+++ b/resources/scss/ceres/views/Templates/PaymentShippingSelect/_payment-shipping-select.scss
@@ -26,7 +26,7 @@
 		}
 
 		input:checked + label{
-			box-shadow: inset 0 0 0 .1rem $brand-primary;
+			box-shadow: inset 0 0 0 .1rem $primary;
 		}
 
 		label{
