--- a/resources/scss/ceres/views/Templates/ToggleCategoryListView/_toggle-list-view.scss
+++ b/resources/scss/ceres/views/Templates/ToggleCategoryListView/_toggle-list-view.scss
@@ -6,7 +6,7 @@
 	}
 
 	.fa:nth-of-type(1){
-		color: $brand-primary;
+		color: $primary;
 		font-size: 1.5rem;
 	}
 
@@ -23,7 +23,7 @@
 		}
 		
 		.fa:nth-of-type(2){
-			color: $brand-primary;
+			color: $primary;
 		}
 	}
 	
