--- a/resources/scss/ceres/widgets/Common/_item-list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_item-list-widget.scss
@@ -29,36 +29,31 @@
 
     &.widget-primary .widget-caption
     {
-        @include widget-bg-variant($brand-primary);
+        @include widget-bg-variant($primary);
     }
 
     &.widget-secondary .widget-caption
     {
-        @include widget-bg-variant($brand-secondary);
+        @include widget-bg-variant($secondary);
     }
 
     &.widget-success .widget-caption
     {
-        @include widget-bg-variant($brand-success);
+        @include widget-bg-variant($success);
     }
 
     &.widget-info .widget-caption
     {
-        @include widget-bg-variant($brand-info);
+        @include widget-bg-variant($info);
     }
 
     &.widget-warning .widget-caption
     {
-        @include widget-bg-variant($brand-warning);
+        @include widget-bg-variant($warning);
     }
 
     &.widget-danger .widget-caption
     {
-        @include widget-bg-variant($brand-danger);
-    }
-
-    &.widget-inverse .widget-caption
-    {
-        @include widget-bg-variant($brand-inverse);
+        @include widget-bg-variant($danger);
     }
 }
