--- a/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
@@ -44,7 +44,7 @@
         top: 50%;
         transform: translateY(-50%);
         text-align: center;
-        padding: $spacer-x $spacer-y;
+        padding: $spacer;
         width: 100%;
     }
 
