--- a/resources/scss/ceres/common/_card.scss
+++ b/resources/scss/ceres/common/_card.scss
@@ -15,8 +15,8 @@
 		    transition: all .2s ease-in-out;
 
 		    &:hover{
-				color: $brand-primary;
-				border-color: $brand-primary;
+				color: $primary;
+				border-color: $primary;
 	    	}
     	}
 	}
