--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -13,7 +13,7 @@ body .wrapper-main{
 }
 
 .page-content{
-    @extend .p-t-1;
+    padding-top: $spacer;
     background-color: $gray-lightest;
     &.basket,
     &.checkout,
