--- a/resources/scss/ceres/views/PageDesign/_search-box.scss
+++ b/resources/scss/ceres/views/PageDesign/_search-box.scss
@@ -89,12 +89,12 @@
         line-height: 1;
         background: #ffffff;
         padding: .4rem 1rem;
-        color: $brand-primary;
+        color: $primary;
         border: none;
         transition: all 300ms;
         outline: none;
         &:hover {
-            color: darken($brand-primary, 20%);
+            color: darken($primary, 20%);
         }
     }
 }
