--- a/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
+++ b/resources/scss/ceres/views/Templates/AddressSelect/_address-select.scss
@@ -82,7 +82,7 @@
 		input:checked{
 
 			& + .item-inner{
-				box-shadow: inset 0 0 0 0.1rem $brand-primary;
+				box-shadow: inset 0 0 0 0.1rem $primary;
 				color: $black;
 				background-color: #d9edf7;
 			}
