--- a/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
+++ b/resources/scss/ceres/views/Templates/Hero/_component-hero.scss
@@ -144,7 +144,7 @@
 
 			.hero-category-headline{
 				padding: 1.5rem;
-				font-size: $font-size-h4;
+				font-size: $h4-font-size;
 			}
 
 			.hero-category-cta{
