--- a/resources/scss/ceres/widgets/Common/_image-box-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-box-widget.scss
@@ -103,12 +103,12 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-primary, .8) );
+            @include widget-bg-variant( rgba($primary, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-primary, .9) );
+            @include widget-bg-variant( rgba($primary, .9) );
         }
     }
 
@@ -116,12 +116,12 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-secondary, .8) );
+            @include widget-bg-variant( rgba($secondary, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-secondary, .9) );
+            @include widget-bg-variant( rgba($secondary, .9) );
         }
     }
 
@@ -129,12 +129,12 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-success, .8) );
+            @include widget-bg-variant( rgba($success, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-success, .9) );
+            @include widget-bg-variant( rgba($success, .9) );
         }
     }
 
@@ -142,12 +142,12 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-info, .8) );
+            @include widget-bg-variant( rgba($info, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-info, .9) );
+            @include widget-bg-variant( rgba($info, .9) );
         }
     }
 
@@ -155,12 +155,12 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-warning, .8) );
+            @include widget-bg-variant( rgba($warning, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-warning, .9) );
+            @include widget-bg-variant( rgba($warning, .9) );
         }
     }
 
@@ -168,28 +168,14 @@
     {
         .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-danger, .8) );
+            @include widget-bg-variant( rgba($danger, .8) );
         }
 
         a[href].widget-inner:hover .widget-caption
         {
-            @include widget-bg-variant( rgba($brand-danger, .9) );
+            @include widget-bg-variant( rgba($danger, .9) );
         }
     }
-
-    &.widget-inverse
-    {
-        .widget-caption
-        {
-            @include widget-bg-variant( rgba($brand-inverse, .8) );
-        }
-
-        a[href].widget-inner:hover .widget-caption
-        {
-            @include widget-bg-variant( rgba($brand-inverse, .9) );
-        }
-    }
-
 }
 
 /* Compatibility for IE */
