--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -161,10 +161,9 @@ html.ie {
     }
 }
 
-@include widget-carousel-variant('.widget-primary', $brand-primary);
-@include widget-carousel-variant('.widget-secondary', $brand-secondary);
-@include widget-carousel-variant('.widget-success', $brand-success);
-@include widget-carousel-variant('.widget-info', $brand-info);
-@include widget-carousel-variant('.widget-warning', $brand-warning);
-@include widget-carousel-variant('.widget-danger', $brand-danger);
-@include widget-carousel-variant('.widget-inverse', $brand-inverse);
+@include widget-carousel-variant('.widget-primary', $primary);
+@include widget-carousel-variant('.widget-secondary', $secondary);
+@include widget-carousel-variant('.widget-success', $success);
+@include widget-carousel-variant('.widget-info', $info);
+@include widget-carousel-variant('.widget-warning', $warning);
+@include widget-carousel-variant('.widget-danger', $danger);
