--- a/resources/scss/ceres/widgets/Common/_text-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_text-widget.scss
@@ -29,36 +29,31 @@
 
     &.widget-primary
     {
-        @include widget-bg-variant($brand-primary);
+        @include widget-bg-variant($primary);
     }
 
     &.widget-secondary
     {
-        @include widget-bg-variant($brand-secondary);
+        @include widget-bg-variant($secondary);
     }
 
     &.widget-success
     {
-        @include widget-bg-variant($brand-success);
+        @include widget-bg-variant($success);
     }
 
     &.widget-info
     {
-        @include widget-bg-variant($brand-info);
+        @include widget-bg-variant($info);
     }
 
     &.widget-warning
     {
-        @include widget-bg-variant($brand-warning);
+        @include widget-bg-variant($warning);
     }
 
     &.widget-danger
     {
-        @include widget-bg-variant($brand-danger);
-    }
-
-    &.widget-inverse
-    {
-        @include widget-bg-variant($brand-inverse);
+        @include widget-bg-variant($danger);
     }
 }
