ADD legacy styles

--- a/resources/scss/Ceres.scss
+++ b/resources/scss/Ceres.scss
@@ -90,4 +90,4 @@
 @import "ceres/widgets/widgets";
 
 // Bootstrap Compatibility 
-@import "ceres/common/visibility"
+@import "ceres/common/visibility";
