--- a/resources/views/Customer/Register.twig
+++ b/resources/views/Customer/Register.twig
@@ -14,7 +14,7 @@
                 <h1>
                     {{ trans("Ceres::Template.regRegisterAccount") }}
 
-                     <popper v-cloak class="pull-right">
+                     <popper v-cloak class="float-right">
                         <button slot="handle" class="btn btn-icon btn-secondary btn-sm">
                             <i class="fa fa-info"></i>
                         </button>
