--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -31,7 +31,7 @@
                 {% endif %}
             </div>
             <div class="col-sm-3">
-                <a href="#" class="btn btn-danger pull-xs-right btn-medium" v-logout>
+                <a href="#" class="btn btn-danger float-xs-right btn-medium" v-logout>
                     <i class="fa fa-sign-out"></i>
                     {{ trans("Ceres::Template.myAccountLogout") }}
                 </a>
