--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -109,7 +109,7 @@
                             <div class="modal-title h3">
                                 {{ trans("Ceres::Template.regCreateAccount") }}
 
-                                <popper v-cloak class="pull-right mr-3">
+                                <popper v-cloak class="float-right mr-3">
                                     <button slot="handle" class="btn btn-icon btn-secondary btn-sm">
                                         <i class="fa fa-info"></i>
                                     </button>
