--- a/resources/views/PageDesign/Partials/Header/NavigationList.twig
+++ b/resources/views/PageDesign/Partials/Header/NavigationList.twig
@@ -1,6 +1,6 @@
 {% import "Ceres::Category.Macros.CategoryTree" as Tree %}
 
-<ul class="mainmenu pull-lg-right">
+<ul class="mainmenu float-lg-right">
     {{ Tree.get_nav_bar(
         categories,
         "",
