--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -1,3 +1,10 @@
+nav.navbar {
+	.container-max,
+	.row {
+		display: block;
+	}
+}
+
 nav.navbar ul.nav li.dropdown:hover .dropdown-menu {
 	display: block;
 	margin-top: 0px;
@@ -31,7 +38,7 @@ $menu-h-lg  			: 100%;
 $menu-w-lg  			: 100%;
 $menu-bg-lg 			: transparent;
 $menu-color-lg 			: $primary;
-$menu-font-s-lg  		: 1em;
+$menu-font-s-lg  		: 1rem;
 $menu-font-f-lg  		: $font-family-serif;
 $menu-li-bg-hover		: $primary;
 $menu-li-color-hover	: $white;
