--- a/resources/views/Checkout/Components/PaymentProviderSelect.twig
+++ b/resources/views/Checkout/Components/PaymentProviderSelect.twig
@@ -21,7 +21,7 @@
                     </div><!--
                     --><div class="content">
                     ${ paymentProvider.name }
-                        <small v-if="paymentProvider.sourceUrl" class="pull-xs-right">
+                        <small v-if="paymentProvider.sourceUrl" class="float-xs-right">
                             <a :href="paymentProvider.sourceUrl" rel="noopener noreferrer" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> details</a>
                         </small>
                         <div>
