--- a/resources/views/Customer/Components/GuestLogin.twig
+++ b/resources/views/Customer/Components/GuestLogin.twig
@@ -17,7 +17,7 @@
                             <span class="error-msg">{{ trans("Ceres::Template.loginEnterConfirmEmail") }}</span>
                         </div>       
                         <div class="modal-footer">
-                            <button @click.prevent="validate" :disabled="isDisabled" class="btn btn-primary btn-medium pull-xs-right">
+                            <button @click.prevent="validate" :disabled="isDisabled" class="btn btn-primary btn-medium float-xs-right">
                                 <i v-waiting-animation="isDisabled" class="fa fa-arrow-right" aria-hidden="true"></i>
                                 {{ trans("Ceres::Template.loginNext") }}
                             </button>
