--- a/resources/views/PageDesign/Partials/Header/Navigation.twig
+++ b/resources/views/PageDesign/Partials/Header/Navigation.twig
@@ -8,7 +8,7 @@
     <div class="container-max">
         <div class="row">
             <div class="brand-wrapper" {% if showHeaderNavBar == "side" %}style="position: relative"{% endif %}>
-                <a class="navbar-brand pull-lg-left" href="{{ homepageURL }}">
+                <a class="navbar-brand float-lg-left" href="{{ homepageURL }}">
                     {% if ('http' in companyLogo) or ('layout/' in companyLogo) %}
                         <img alt="{{ companyName }}" src="{{ companyLogo }}" class="img-fluid" crossorigin="anonymous" />
                     {% else %}
