FIX margin in header

--- a/resources/scss/ceres/views/PageDesign/_navigation.scss
+++ b/resources/scss/ceres/views/PageDesign/_navigation.scss
@@ -1,7 +1,15 @@
-nav.navbar {
-	.container-max,
-	.row {
+nav.navbar
+{
+	.container-max
+	{
 		display: block;
+	}
+
+	.row
+	{
+		display: block;
+        margin-left: 0;
+        margin-right: 0;
 	}
 }
 
