--- a/resources/views/MyAccount/Components/ChangePaymentMethod.twig
+++ b/resources/views/MyAccount/Components/ChangePaymentMethod.twig
@@ -82,7 +82,7 @@
                                             </div><!--
                                         --><div class="content">
                                                 ${ paymentProvider.name }
-                                                <small v-if="paymentProvider.sourceUrl" class="float-xs-right">
+                                                <small v-if="paymentProvider.sourceUrl" class="float-right">
                                                     <a :href="paymentProvider.sourceUrl" rel="noopener noreferrer" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> details</a>
                                                 </small>
                                                 <div>
