--- a/resources/views/ItemList/Components/Filter/ItemFilterList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterList.twig
@@ -3,18 +3,9 @@
         {{ component( "Ceres::ItemList.Components.Filter.ItemFilter") }}
         {{ component( "Ceres::ItemList.Components.Filter.ItemFilterPrice") }}
 
-        <div class="filter-controls">
-            <a class="btn btn-link filter-reset-all" v-if="initialSelectedFacets.length" @click="resetAllSelectedFacets()">
-                <i class="fa fa-times default-float" aria-hidden="true"></i>
-                <span>{{ trans("Ceres::Template.itemFilterReset") }}</span>
-            </a>
-
-            <a class="btn btn-link filter-toggle" data-toggle="collapse" href="#filterCollapse" aria-controls="filterCollapse" @click="toggleOpeningState()">
-                <i class="fa fa-sliders default-float" aria-hidden="true"></i>
-                <span v-if="isInitialFacetSelectionActive">{{ trans("Ceres::Template.itemFilter") }}</span>
-                <span v-else>{{ trans("Ceres::Template.itemFilterApply") }}</span>
-            </a>
-        </div>
+        <a class="btn btn-link filter-toggle" data-toggle="collapse" href="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse" @click="toggleOpeningState()">
+            <i class="fa fa-sliders default-float" aria-hidden="true"></i> {{ trans("Ceres::Template.itemFilter") }}
+        </a>
 
         <div class="collapse" :class="{in: isActive}" id="filterCollapse">
             <div class="container-max page-content component-loading with-icon refreshing" :class="{ 'isLoading': isLoading }">
