--- a/resources/views/ItemList/Components/Filter/ItemFilterTagList.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterTagList.twig
@@ -3,5 +3,9 @@
         <span :class="'selected-filter filter-' + tag.id" v-for="tag in tagList" @click="removeTag(tag)">
             <i class="fa fa-times" aria-hidden="true"></i> ${ tag.name }
         </span>
+
+        <span class="selected-filter reset-all" v-if="tagList.length > 2" @click="resetAllTags()">
+            {{ trans("Ceres::Template.itemFilterReset") }}
+        </span>
     </div>
 </script>
